force-app/main/default/objects/MergeResultFieldMapping__mdt/MergeResultFieldMapping__mdt.object-meta.xml
<CustomObject>
    <description>This metadata maps a field from an object (e.g., Account, Contact) to a field on the Merge Result record that would be created when records are merged in that object</description>
    <label>Merge Result Field Mapping</label>
    <pluralLabel>Merge Result Field Mappings</pluralLabel>
</CustomObject>