force-app/main/default/objects/MergeResultFieldMapping__mdt/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <description>The full API name (including &quot;__c&quot; for custom fields) of the field under consideration</description>
    <inlineHelpText>The full API name (including &quot;__c&quot; for custom fields) of the field under consideration</inlineHelpText>
    <label>Field Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>