force-app/main/default/objects/MergeResultFieldMapping__mdt/fields/ResultFieldEnding__c.field-meta.xml
<CustomField>
    <fullName>ResultFieldEnding__c</fullName>
    <description>The unique ending (including &quot;__c&quot; for custom fields) of the target Merge Result field in which the value from the involved record should be stored. This is used to derive the appropriate `EffectiveMasterRecord`, `MasterRecord` and `MergedRecord` fields.</description>
    <inlineHelpText>The unique ending (including &quot;__c&quot; for custom fields) of the target Merge Result field</inlineHelpText>
    <label>Result Field Ending</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>